--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,9 @@
 {
-  "endOfLine": "lf",
+  "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxSingleQuote": false,
+  "printWidth": 120,
   "semi": true,
-  "printWidth": 100,
-  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "arrowParens": "avoid"
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
