--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce-application",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "license": "MIT",
   "author": "codenuru",
@@ -21,48 +21,60 @@
     "firebase": "firebase emulators:start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
-    "format": "prettier --write src",
+    "lint:strict": "eslint --max-warnings=0 src",
+    "typecheck": "tsc --noEmit --incremental false",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "analyze": "ANALYZE=true yarn build",
     "up-latest": "yarn upgrade-interactive --latest",
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.10",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "firebase": "^9.2.0",
+    "@chakra-ui/react": "2.2.4",
+    "@chakra-ui/theme-tools": "^2.0.5",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "firebase": "^9.9.1",
     "formik": "^2.2.9",
-    "framer-motion": "^5.1.0",
-    "next": "^12.0.2",
-    "next-pwa": "^5.4.0",
-    "next-seo": "^4.28.1",
-    "react": "^18.0.0-alpha-00ced1e2b-20211102",
-    "react-dom": "^18.0.0-alpha-00ced1e2b-20211102",
-    "react-icons": "^4.3.1",
+    "framer-motion": "^6.5.1",
+    "next": "^12.2.3",
+    "next-seo": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "sharp": "^0.30.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^14.1.0",
-    "@types/react": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "commitlint": "^14.1.0",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "^12.0.2",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "next-sitemap": "^1.6.203",
-    "prettier": "^2.4.1",
-    "standard-version": "^9.3.2",
-    "typescript": "^4.4.4"
+    "@commitlint/config-conventional": "^17.0.3",
+    "@next/bundle-analyzer": "^12.2.3",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "commitlint": "^17.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "^12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "next-sitemap": "^3.1.15",
+    "prettier": "^2.7.1",
+    "standard-version": "^9.5.0",
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
       "eslint --max-warnings=0",
-      "prettier --write"
+      "prettier -w"
     ],
     "src/**/*.{json,css,scss,md}": [
-      "prettier --write"
+      "prettier -w"
     ]
   }
 }
