--- a/.prettierignore
+++ b/.prettierignore
@@ -9,6 +9,7 @@
 /coverage
 
 # next.js
+.next
 /.next/
 /out/
 
@@ -23,24 +24,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-firebase-debug.log*
-firestore-debug.log*
-ui-debug.log*
 
 # local env files
-.env.local*
-.env.development*
-.env.test*
-.env.production*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-**/public/workbox-*.js
-**/public/sw.js
-**/public/service-worker.js
-
-# next-sitemap
-robots.txt
-sitemap.xml
-sitemap-*.xml
+# changelog
+CHANGELOG.md
