--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
+    "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
+    "aaron-bond.better-comments",
     "vivaxy.vscode-conventional-commits",
     "coenraads.bracket-pair-colorizer",
     "dsznajder.es7-react-js-snippets",
